--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="btn_login">Acceder</string>
     <string name="link_register">Crear una cuenta</string>
     <string name="txt_access">Ingresar con:</string>
+    <string name="txt_welcome">Bienvenido %s</string>
     
 </resources>
